--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,10 +23,16 @@ path = "src/bin.rs"
 
 [dependencies]
 bitcoin = "0.27"
-serde_json = "1"
-regex = "1"
+
+# Optional dependencies
+serde_json = { version = "1", optional = true }
+regex = { version = "1", optional = true }
 
 [dev-dependencies]
 miniscript = "6"
 bdk = "0.15"
 rstest = "0.11"
+
+[features]
+default = [ "wallet_file" ]
+wallet_file = [ "serde_json", "regex"]
