--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ path = "src/bin.rs"
 bitcoin = "0.27"
 
 # Optional dependencies
+serde = { version = "1", optional = true }
 serde_json = { version = "1", optional = true }
 regex = { version = "1", optional = true }
 
@@ -32,7 +33,8 @@ regex = { version = "1", optional = true }
 miniscript = "6"
 bdk = "0.15"
 rstest = "0.11"
+tempfile = "3.2"
 
 [features]
 default = [ "wallet_file" ]
-wallet_file = [ "serde_json", "regex"]
+wallet_file = [ "serde", "serde_json", "regex"]
