--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -26,11 +26,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - uses: actions-rs/toolchain@v1
+      - uses: dtolnay/rust-toolchain@master
         with:
           toolchain: ${{ matrix.rust }}
-          profile: minimal
-          override: true
           components: rustfmt, clippy
       - name: Build
         run: cargo build --no-default-features --features "${{ matrix.features }}"
@@ -46,11 +44,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Setup Rust Toolchain
-        uses: actions-rs/toolchain@v1
+        uses: dtolnay/rust-toolchain@master
         with:
           toolchain: stable
-          profile: minimal
-          override: true
           components: rustfmt, clippy
       - name: Check fmt
         run: cargo fmt --all -- --check
@@ -63,7 +59,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions-rust-lang/audit@v1
         name: Audit Rust Dependencies
-        with:
+        # with:
           # Comma separated list of issues to ignore
-          ignore: RUSTSEC-2020-0036
+          # ignore: RUSTSEC-2020-0036
 
