--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ path = "src/bin.rs"
 
 [dependencies]
 bitcoin = "0.30"
+thiserror = "2"
 
 # Optional dependencies
 serde = { version = "1", optional = true, features = ["derive"] }
